Item8891: add editMenu() stub, fix icons so they don't get stretched, and add class and onclick to menus
git-svn-id: http://svn.foswiki.org/trunk/JQuerymbComponentsPlugin@7206 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/pub/System/JQuerymbMenu/menu_red.css
+++ b/pub/System/JQuerymbMenu/menu_red.css
@@ -110,9 +110,6 @@
 	width:24px;
 	padding:5px;
 }
-.menuContainer td.img img{
-	width:20px;
-}
 .menuContainer .textBox{
 	padding: 10px;
 	font-family:Arial,Helvetica,sans-serif;
